--- a/lab_2_submission/lab_2_submission.rmd
+++ b/lab_2_submission/lab_2_submission.rmd
@@ -344,14 +344,19 @@ mod10 <- lm(Student.Performance.Reading.and.Math~Student.Attendance + Involved.F
 
 waldtest(mod5, mod10,  vcov=vcovHC(mod10, type="HC0")) # significant
 
+#growth variable
+mod11 <- lm(Student.Performance.Reading.and.Math~Student.Attendance + Involved.Families + Safety + Years.on.Probation + Growth.Reading.and.Math, data=my_data)
+
+waldtest(mod10, mod11,  vcov=vcovHC(mod11, type="HC0"))
+
 # location
 # latitude
-mod11 <- lm(Student.Performance.Reading.and.Math~Student.Attendance + Involved.Families + Safety + Years.on.Probation + Latitude, data=my_data)
+mod12 <- lm(Student.Performance.Reading.and.Math~Student.Attendance + Involved.Families + Safety + Years.on.Probation + Growth.Reading.and.Math + Latitude, data=my_data)
 
-waldtest(mod10, mod11,  vcov=vcovHC(mod11, type="HC0")) # not significant
+waldtest(mod11, mod12,  vcov=vcovHC(mod12, type="HC0")) # not significant
 
 # longitude
-mod12 <- lm(Student.Performance.Reading.and.Math~Student.Attendance + Involved.Families + Safety + Years.on.Probation + Longitude, data=my_data)
+mod12 <- lm(Student.Performance.Reading.and.Math~Student.Attendance + Involved.Families + Safety + Years.on.Probation + Growth.Reading.and.Math + Longitude, data=my_data)
 
 waldtest(mod10, mod12,  vcov=vcovHC(mod12, type="HC0")) # significant
 
